@@ -1,17 +1,17 @@
 /*
- * Copyright 2006-2018 The MZmine 2 Development Team
- * 
- * This file is part of MZmine 2.
- * 
- * MZmine 2 is free software; you can redistribute it and/or modify it under the terms of the GNU
+ * Copyright 2006-2020 The MZmine Development Team
+ *
+ * This file is part of MZmine.
+ *
+ * MZmine is free software; you can redistribute it and/or modify it under the terms of the GNU
  * General Public License as published by the Free Software Foundation; either version 2 of the
  * License, or (at your option) any later version.
- * 
- * MZmine 2 is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
- * even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
- * General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License along with MZmine 2; if not,
+ *
+ * MZmine is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
+ * the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
+ * Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License along with MZmine; if not,
  * write to the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301
  * USA
  */
@@ -19,11 +19,12 @@
 package io.github.mzmine.modules.dataprocessing.filter_scanfilters;
 
 import java.awt.Color;
-import java.awt.Window;
-
+import io.github.mzmine.datamodel.RawDataFile;
 import io.github.mzmine.datamodel.Scan;
+import io.github.mzmine.main.MZmineCore;
 import io.github.mzmine.modules.visualization.spectra.simplespectra.SpectraPlot;
-import io.github.mzmine.modules.visualization.spectra.simplespectra.SpectraVisualizerWindow;
+import io.github.mzmine.modules.visualization.spectra.simplespectra.SpectraVisualizerTab;
+import io.github.mzmine.modules.visualization.spectra.simplespectra.SpectrumPlotType;
 import io.github.mzmine.modules.visualization.spectra.simplespectra.datasets.ScanDataSet;
 import io.github.mzmine.parameters.ParameterSet;
 import io.github.mzmine.parameters.dialogs.ParameterSetupDialogWithScanPreview;
@@ -34,22 +35,21 @@ import io.github.mzmine.parameters.dialogs.ParameterSetupDialogWithScanPreview;
  */
 public class ScanFilterSetupDialog extends ParameterSetupDialogWithScanPreview {
 
-  private static final long serialVersionUID = 1L;
   private ParameterSet filterParameters;
   private ScanFilter rawDataFilter;
+  private RawDataFile tmpFile;
 
   /**
-   * @param parameters
-   * @param rawDataFilterTypeNumber
    */
-  public ScanFilterSetupDialog(Window parent, boolean valueCheckRequired,
-      ParameterSet filterParameters, Class<? extends ScanFilter> filterClass) {
+  public ScanFilterSetupDialog(boolean valueCheckRequired, ParameterSet filterParameters,
+      Class<? extends ScanFilter> filterClass) {
 
-    super(parent, valueCheckRequired, filterParameters);
+    super(valueCheckRequired, filterParameters);
     this.filterParameters = filterParameters;
 
     try {
-      this.rawDataFilter = filterClass.newInstance();
+      this.rawDataFilter = filterClass.getDeclaredConstructor().newInstance();
+      this.tmpFile = MZmineCore.createNewFile("tmp", null);
     } catch (Exception e) {
       e.printStackTrace();
     }
@@ -57,23 +57,24 @@ public class ScanFilterSetupDialog extends ParameterSetupDialogWithScanPreview {
 
   /**
    * This function set all the information into the plot chart
-   * 
-   * @param scanNumber
+   *
+   * @param
    */
+  @Override
   protected void loadPreview(SpectraPlot spectrumPlot, Scan previewScan) {
 
-    Scan newScan = rawDataFilter.filterScan(previewScan, filterParameters);
+    Scan newScan = rawDataFilter.filterScan(tmpFile, previewScan, filterParameters);
 
     ScanDataSet spectraDataSet = new ScanDataSet("Filtered scan", newScan);
     ScanDataSet spectraOriginalDataSet = new ScanDataSet("Original scan", previewScan);
 
     spectrumPlot.removeAllDataSets();
 
-    spectrumPlot.addDataSet(spectraOriginalDataSet, SpectraVisualizerWindow.scanColor, true);
+    spectrumPlot.addDataSet(spectraOriginalDataSet, SpectraVisualizerTab.scanColor, true);
     spectrumPlot.addDataSet(spectraDataSet, Color.green, true);
 
     // if the scan is centroided, switch to centroid mode
-    spectrumPlot.setPlotMode(previewScan.getSpectrumType());
+    spectrumPlot.setPlotMode(SpectrumPlotType.fromScan(previewScan));
 
   }
 }
