@@ -1,39 +1,47 @@
 /*
- * Copyright 2006-2018 The MZmine 2 Development Team
- * 
- * This file is part of MZmine 2.
- * 
- * MZmine 2 is free software; you can redistribute it and/or modify it under the terms of the GNU
+ * Copyright 2006-2020 The MZmine Development Team
+ *
+ * This file is part of MZmine.
+ *
+ * MZmine is free software; you can redistribute it and/or modify it under the terms of the GNU
  * General Public License as published by the Free Software Foundation; either version 2 of the
  * License, or (at your option) any later version.
- * 
- * MZmine 2 is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
- * even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
- * General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License along with MZmine 2; if not,
+ *
+ * MZmine is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
+ * the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
+ * Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License along with MZmine; if not,
  * write to the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301
  * USA
  */
 
 package io.github.mzmine.parameters.impl;
 
-import org.w3c.dom.Document;
-import org.w3c.dom.Element;
-import org.w3c.dom.NodeList;
-
+import io.github.mzmine.datamodel.IMSRawDataFile;
+import io.github.mzmine.datamodel.RawDataFile;
+import io.github.mzmine.datamodel.features.FeatureList;
+import io.github.mzmine.gui.preferences.MZminePreferences;
 import io.github.mzmine.main.MZmineCore;
 import io.github.mzmine.parameters.Parameter;
 import io.github.mzmine.parameters.ParameterContainer;
 import io.github.mzmine.parameters.ParameterSet;
 import io.github.mzmine.parameters.dialogs.ParameterSetupDialog;
+import io.github.mzmine.parameters.parametertypes.selectors.FeatureListsParameter;
+import io.github.mzmine.parameters.parametertypes.selectors.RawDataFilesParameter;
 import io.github.mzmine.util.ExitCode;
-
-import java.awt.*;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.HashSet;
+import java.util.Map;
+import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+import javafx.application.Platform;
+import javafx.scene.control.ButtonType;
+import org.w3c.dom.Document;
+import org.w3c.dom.Element;
+import org.w3c.dom.NodeList;
 
 /**
  * Simple storage for the parameters. A typical MZmine module will inherit this class and define the
@@ -41,12 +49,10 @@ import java.util.logging.Logger;
  */
 public class SimpleParameterSet implements ParameterSet {
 
-  private static Logger logger = Logger.getLogger(MZmineCore.class.getName());
-
   private static final String parameterElement = "parameter";
   private static final String nameAttribute = "name";
-
-  private Parameter<?> parameters[];
+  private static Logger logger = Logger.getLogger(MZmineCore.class.getName());
+  protected Parameter<?> parameters[];
   private boolean skipSensitiveParameters = false;
 
   public SimpleParameterSet() {
@@ -57,18 +63,22 @@ public class SimpleParameterSet implements ParameterSet {
     this.parameters = parameters;
   }
 
+  @Override
   public Parameter<?>[] getParameters() {
     return parameters;
   }
 
+  @Override
   public void setSkipSensitiveParameters(boolean skipSensitiveParameters) {
     this.skipSensitiveParameters = skipSensitiveParameters;
     for (Parameter<?> parameter : parameters) {
-      if (parameter instanceof ParameterContainer)
+      if (parameter instanceof ParameterContainer) {
         ((ParameterContainer) parameter).setSkipSensitiveParameters(skipSensitiveParameters);
+      }
     }
   }
 
+  @Override
   public void loadValuesFromXML(Element xmlElement) {
     NodeList list = xmlElement.getElementsByTagName(parameterElement);
     for (int i = 0; i < list.getLength(); i++) {
@@ -87,11 +97,13 @@ public class SimpleParameterSet implements ParameterSet {
     }
   }
 
+  @Override
   public void saveValuesToXML(Element xmlElement) {
     Document parentDocument = xmlElement.getOwnerDocument();
     for (Parameter<?> param : parameters) {
-      if (skipSensitiveParameters && param.isSensitive())
+      if (skipSensitiveParameters && param.isSensitive()) {
         continue;
+      }
       Element paramElement = parentDocument.createElement(parameterElement);
       paramElement.setAttribute(nameAttribute, param.getName());
       xmlElement.appendChild(paramElement);
@@ -100,10 +112,10 @@ public class SimpleParameterSet implements ParameterSet {
     }
   }
 
-
   /**
    * Represent method's parameters and their values in human-readable format
    */
+  @Override
   public String toString() {
 
     StringBuilder s = new StringBuilder();
@@ -112,8 +124,9 @@ public class SimpleParameterSet implements ParameterSet {
       Parameter<?> param = parameters[i];
       Object value = param.getValue();
 
-      if (value == null)
+      if (value == null) {
         continue;
+      }
 
       s.append(param.getName());
       s.append(": ");
@@ -122,8 +135,9 @@ public class SimpleParameterSet implements ParameterSet {
       } else {
         s.append(value.toString());
       }
-      if (i < parameters.length - 1)
+      if (i < parameters.length - 1) {
         s.append(", ");
+      }
     }
     return s.toString();
   }
@@ -131,6 +145,7 @@ public class SimpleParameterSet implements ParameterSet {
   /**
    * Make a deep copy
    */
+  @Override
   public ParameterSet cloneParameterSet() {
 
     // Make a deep copy of the parameters
@@ -140,37 +155,43 @@ public class SimpleParameterSet implements ParameterSet {
     }
 
     try {
-      // Do not make a new instance of SimpleParameterSet, but instead
-      // clone the runtime class of this instance - runtime type may be
-      // inherited class. This is important in order to keep the proper
-      // behavior of showSetupDialog(xxx) method for cloned classes
-
-      SimpleParameterSet newSet = this.getClass().newInstance();
+      /*
+       * Do not create a new instance of SimpleParameterSet, but instead clone the runtime class of
+       * this instance - runtime type may be inherited class. This is important in order to keep the
+       * proper behavior of showSetupDialog(xxx) method for cloned classes.
+       */
+      SimpleParameterSet newSet = this.getClass().getDeclaredConstructor().newInstance();
       newSet.parameters = newParameters;
       newSet.setSkipSensitiveParameters(skipSensitiveParameters);
 
       return newSet;
-    } catch (Exception e) {
+    } catch (Throwable e) {
       e.printStackTrace();
       return null;
     }
   }
 
+  @Override
   @SuppressWarnings("unchecked")
   public <T extends Parameter<?>> T getParameter(T parameter) {
     for (Parameter<?> p : parameters) {
-      if (p.getName().equals(parameter.getName()))
+      if (p.getName().equals(parameter.getName())) {
         return (T) p;
+      }
     }
     throw new IllegalArgumentException("Parameter " + parameter.getName() + " does not exist");
   }
 
   @Override
-  public ExitCode showSetupDialog(Window parent, boolean valueCheckRequired) {
-    if ((parameters == null) || (parameters.length == 0))
+  public ExitCode showSetupDialog(boolean valueCheckRequired) {
+
+    assert Platform.isFxApplicationThread();
+
+    if ((parameters == null) || (parameters.length == 0)) {
       return ExitCode.OK;
-    ParameterSetupDialog dialog = new ParameterSetupDialog(parent, valueCheckRequired, this);
-    dialog.setVisible(true);
+    }
+    ParameterSetupDialog dialog = new ParameterSetupDialog(valueCheckRequired, this);
+    dialog.showAndWait();
     return dialog.getExitCode();
   }
 
@@ -179,10 +200,93 @@ public class SimpleParameterSet implements ParameterSet {
     boolean allParametersOK = true;
     for (Parameter<?> p : parameters) {
       boolean pOK = p.checkValue(errorMessages);
-      if (!pOK)
+      if (!pOK) {
         allParametersOK = false;
+      }
+      if (p instanceof RawDataFilesParameter) {
+        pOK = checkRawDataFileIonMobilitySupport(
+            ((RawDataFilesParameter) p).getValue().getMatchingRawDataFiles(), errorMessages);
+      } else if (p instanceof FeatureListsParameter) {
+        FeatureList[] lists = ((FeatureListsParameter) p).getValue().getMatchingFeatureLists();
+        Set<RawDataFile> files = new HashSet<>();
+        Arrays.stream(lists).map(FeatureList::getRawDataFiles)
+            .forEach(listFiles -> listFiles.forEach(file -> files.add(file)));
+        pOK = checkRawDataFileIonMobilitySupport(files.toArray(new RawDataFile[0]), errorMessages);
+      }
+      if (!pOK) {
+        allParametersOK = false;
+      }
     }
     return allParametersOK;
   }
 
+  public boolean checkRawDataFileIonMobilitySupport(RawDataFile[] rawDataFiles,
+      Collection<String> errorMessages) {
+    boolean onlyImsFiles = true;
+    boolean containsImsFile = false;
+    for (RawDataFile file : rawDataFiles) {
+      if (!(file instanceof IMSRawDataFile)) {
+        onlyImsFiles = false;
+        errorMessages.add("Non-ion mobility spectrometry files: " + file.getName());
+      } else {
+        containsImsFile = true;
+      }
+    }
+
+    Map<String, Boolean> showMsgMap = MZmineCore.getConfiguration().getPreferences().getParameter(
+        MZminePreferences.imsModuleWarnings).getValue();
+    String className = this.getClass().getName();
+    Boolean showMsg = showMsgMap.getOrDefault(className, true);
+
+    if (containsImsFile && getIonMobilitySupport() == IonMobilitySupport.UNTESTED) {
+      logger.warning(
+          "This module has not been tested with ion mobility data files. This could lead to unexpected results.");
+      if (showMsg) {
+        return MZmineCore.getDesktop()
+            .createAlertWithOptOut("Compatibility warning", "Untested compatibility",
+                "This module has not been tested with ion mobility data files. This could lead "
+                    + "to unexpected results. Do you want to continue anyway?", "Do not show again",
+                optOut -> showMsgMap.put(this.getClass().getName(), !optOut)) == ButtonType.YES;
+      }
+      return true;
+    } else if (containsImsFile && getIonMobilitySupport() == IonMobilitySupport.RESTRICTED) {
+      logger.warning(
+          "This module has certain restrictions when processing ion mobility data files. This"
+              + " could lead to unexpected results");
+      if (showMsg) {
+        return MZmineCore.getDesktop()
+            .createAlertWithOptOut("Compatibility warning", "Restricted compatibility",
+                getRestrictedIonMobilitySupportMessage(), "Do not show again",
+                optOut -> showMsgMap.put(this.getClass().getName(), !optOut)) == ButtonType.YES;
+      }
+    } else if (!onlyImsFiles && getIonMobilitySupport() == IonMobilitySupport.ONLY) {
+      logger.warning(
+          "This module is designed for ion mobility data only. Cannot process non-ion mobility files.");
+      errorMessages.add(
+          "This module is designed for ion mobility data only. Cannot process non-ion mobility files.");
+      return false;
+    } else if (containsImsFile && getIonMobilitySupport() == IonMobilitySupport.UNSUPPORTED) {
+      logger.warning("This module does not support ion mobility data.");
+      errorMessages.add("This module does not support ion mobility data.");
+      return MZmineCore.getDesktop()
+          .displayConfirmation(
+              "This module does not support ion mobility data. This will lead to unexpected "
+                  + "results. Do you want to continue anyway?", ButtonType.YES, ButtonType.NO)
+          == ButtonType.YES;
+    } // dont have to check for IonMobilitySupport.SUPPORTED
+
+    return true;
+  }
+
+  /**
+   * This message is displayed when a ion mobility file is processed with this module without it
+   * explicitly supporting ion mobility data. This method can be overridden to display a more
+   * specific user information on the expected outcome.
+   *
+   * @return The message.
+   */
+  public String getRestrictedIonMobilitySupportMessage() {
+    return "This module has certain restrictions when processing ion mobility data files. This "
+        + "could lead to unexpected results. Do you want to continue anyway?";
+  }
 }
